--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://TerrenceArceo.github.io/planets-fact-site",
   "name": "plantes-fact-site",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
