--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://TerrenceArceo.github.io/planets-fact-site",
+  "homepage": "https://terrencearceo.github.io/planets-fact-site",
   "name": "plantes-fact-site",
   "version": "0.1.0",
   "private": false,
